@@ -4336,6 +4336,30 @@ name|get
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|lst
+operator|.
+name|add
+argument_list|(
+literal|"transaction_logs_total_size"
+argument_list|,
+name|ulog
+operator|.
+name|getTotalLogsSize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|lst
+operator|.
+name|add
+argument_list|(
+literal|"transaction_logs_total_number"
+argument_list|,
+name|ulog
+operator|.
+name|getTotalLogsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
 return|return
 name|lst
 return|;
