@@ -2761,6 +2761,19 @@ operator|+
 literal|"}"
 return|;
 block|}
+DECL|method|getLogSize
+specifier|public
+name|long
+name|getLogSize
+parameter_list|()
+block|{
+return|return
+name|tlogFile
+operator|.
+name|length
+argument_list|()
+return|;
+block|}
 comment|/** Returns a reader that can be used while a log is still in use.    * Currently only *one* LogReader may be outstanding, and that log may only    * be used from a single thread. */
 DECL|method|getReader
 specifier|public
