@@ -1261,6 +1261,56 @@ literal|")"
 return|;
 block|}
 block|}
+DECL|method|getTotalLogsSize
+specifier|public
+name|long
+name|getTotalLogsSize
+parameter_list|()
+block|{
+name|long
+name|size
+init|=
+literal|0
+decl_stmt|;
+synchronized|synchronized
+init|(
+name|logs
+init|)
+block|{
+for|for
+control|(
+name|TransactionLog
+name|log
+range|:
+name|logs
+control|)
+block|{
+name|size
+operator|+=
+name|log
+operator|.
+name|getLogSize
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+return|return
+name|size
+return|;
+block|}
+DECL|method|getTotalLogsNumber
+specifier|public
+name|long
+name|getTotalLogsNumber
+parameter_list|()
+block|{
+return|return
+name|logs
+operator|.
+name|size
+argument_list|()
+return|;
+block|}
 DECL|method|getVersionInfo
 specifier|public
 name|VersionInfo
