@@ -75,6 +75,9 @@ New Features
 * SOLR-5308: A new 'migrate' collection API to split all documents with a
   route key into another collection (shalin)
 
+* SOLR-5441: Expose number of transaction log files and their size via JMX.
+  (Rafał Kuć via shalin)
+
 Bug Fixes
 ----------------------
 
